test-cases/valid/reject/bad_while_condition_type.ul
void main() {
    while (1) { // Can't use int type in condition
        print "This should not work";
    }
}
